PROJECT(ReaDDy2_plugin)

# requires boost dll
INCLUDE(ExternalProject)

# sources
LIST(APPEND READDY_PLUGIN_SOURCES
        KernelProvider.cpp
        KernelPluginDecorator.cpp)

# expose includes
SET(${PROJECT_NAME}_INCLUDE_DIRS "${ReaDDy2_common_INCLUDE_DIRS};${Boost.DLL_INCLUDE_DIRS};${READDY_GLOBAL_INCLUDE_DIR}/plugin;${READDY_GLOBAL_INCLUDE_DIR}/plugin/_internal" CACHE INTERNAL "${PROJECT_NAME}: Include directories" FORCE)

# library
ADD_LIBRARY(${PROJECT_NAME} ${READDY_PLUGIN_SOURCES} "${${PROJECT_NAME}_INCLUDE_DIRS}")

# includes
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${${PROJECT_NAME}_INCLUDE_DIRS})

# Required on Unix OS family to be able to be linked into shared libraries.
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
    POSITION_INDEPENDENT_CODE ON
    LINK_FLAGS "${EXTRA_LINK_FLAGS}"
    COMPILE_FLAGS "${EXTRA_COMPILEFLAGS}"
)

# link
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CMAKE_DL_LIBS} ReaDDy2_common)