PROJECT(ReaDDy2_plugin)

# sources
INCLUDE("${READDY_GLOBAL_DIR}/cmake/sources_plugin.cmake")

# library
ADD_LIBRARY(${PROJECT_NAME} ${READDY_PLUGIN_SOURCES} "${PLUGIN_INCLUDE_DIRS}")

# includes
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${${PROJECT_NAME}_INCLUDE_DIRS})

# Required on Unix OS family to be able to be linked into shared libraries.
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
    POSITION_INDEPENDENT_CODE ON
    LINK_FLAGS "${EXTRA_LINK_FLAGS}"
    COMPILE_FLAGS "${EXTRA_COMPILEFLAGS}"
)

# link
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CMAKE_DL_LIBS} ReaDDy2_common)