# add READDY_WITH_PYTHON define
ADD_DEFINITIONS(-DREADDY_WITH_PYTHON)

PYTHON_ADD_MODULE(simulation PySimulation.cpp)
TARGET_INCLUDE_DIRECTORIES(simulation PUBLIC $ENV{PYTHON_INCLUDE_DIR})
TARGET_INCLUDE_DIRECTORIES(simulation PUBLIC "${ReaDDy_INCLUDE_DIRS};${Boost_INCLUDE_DIRS}")
TARGET_LINK_LIBRARIES(simulation ${PYTHON_LIBRARIES} ${Boost_LIBRARIES} ${READDY_DEPENDENT_LIBRARIES} ReaDDy)

SET_TARGET_PROPERTIES(simulation
    PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${PYTHON_CPP_MODULES_OUTPUT_DIR}"
    LIBRARY_OUTPUT_DIRECTORY "${PYTHON_CPP_MODULES_OUTPUT_DIR}"
)