# add READDY_WITH_PYTHON define
ADD_DEFINITIONS(-DREADDY_WITH_PYTHON)

LIST(APPEND COMMON_MODULE_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/PyConverters.h)
LIST(APPEND COMMON_MODULE_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/PyPotential.h)
LIST(APPEND COMMON_MODULE_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/PyPotential.cpp)
LIST(APPEND COMMON_MODULE_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/PyObservable.h)
LIST(APPEND COMMON_MODULE_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/PyObservable.cpp)
LIST(APPEND COMMON_MODULE_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/PyFunction.h)
LIST(APPEND COMMON_MODULE_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/PybindOpaqueTypes.h)

ADD_SUBDIRECTORY(api)
ADD_SUBDIRECTORY(prototyping)
ADD_SUBDIRECTORY(common)