LIST(APPEND API_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/PySimulation.cpp)
LIST(APPEND API_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/ExportSchemeApi.h)

PYTHON_ADD_MODULE(api ${COMMON_MODULE_SOURCES} ${API_SOURCES})
TARGET_INCLUDE_DIRECTORIES(api PUBLIC $ENV{PYTHON_INCLUDE_DIR})
TARGET_INCLUDE_DIRECTORIES(api PUBLIC ${NUMPY_INCLUDE_DIR})
TARGET_INCLUDE_DIRECTORIES(api PUBLIC "${ReaDDy_INCLUDE_DIRS};${Boost_INCLUDE_DIRS}")
TARGET_LINK_LIBRARIES(api ${PYTHON_LIBRARIES} ${Boost_LIBRARIES} ${READDY_DEPENDENT_LIBRARIES} ReaDDy)

SET_TARGET_PROPERTIES(api
        PROPERTIES
        ARCHIVE_OUTPUT_DIRECTORY "${PYTHON_CPP_MODULES_OUTPUT_DIR}"
        LIBRARY_OUTPUT_DIRECTORY "${PYTHON_CPP_MODULES_OUTPUT_DIR}"
        )