LIST(APPEND API_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/PySimulation.cpp)
LIST(APPEND API_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/ExportSchemeApi.h)
LIST(APPEND API_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/PyFunction.h)
LIST(APPEND API_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/PyPotential.h)
LIST(APPEND API_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/PyPotential.cpp)

PYBIND11_ADD_MODULE(api ${API_SOURCES})
TARGET_INCLUDE_DIRECTORIES(api PUBLIC "${ReaDDy_INCLUDE_DIRS}")
TARGET_LINK_LIBRARIES(api LINK_PUBLIC ${PYTHON_LIBRARIES} ${READDY_DEPENDENT_LIBRARIES} ReaDDy)

SET_TARGET_PROPERTIES(api
        PROPERTIES
        ARCHIVE_OUTPUT_DIRECTORY "${PYTHON_CPP_MODULES_OUTPUT_DIR}"
        LIBRARY_OUTPUT_DIRECTORY "${PYTHON_CPP_MODULES_OUTPUT_DIR}"
        CXX_STANDARD ${READDY_STANDARD}
        CXX_STANDARD_REQUIRED ON
        )