LIST(APPEND COMMON_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CommonModule.cpp)

PYBIND11_ADD_MODULE(common ${COMMON_SOURCES})
TARGET_INCLUDE_DIRECTORIES(common PUBLIC "${ReaDDy_INCLUDE_DIRS};${Boost_INCLUDE_DIRS}")
TARGET_LINK_LIBRARIES(common LINK_PUBLIC ${Boost_LIBRARIES} ${READDY_DEPENDENT_LIBRARIES} ReaDDy)

SET_TARGET_PROPERTIES(common
        PROPERTIES
        ARCHIVE_OUTPUT_DIRECTORY "${PYTHON_CPP_MODULES_OUTPUT_DIR}"
        LIBRARY_OUTPUT_DIRECTORY "${PYTHON_CPP_MODULES_OUTPUT_DIR}"
        )